backend-deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: chandray/mern-docker-compose-backend:latest
          ports:
            - containerPort: 5050
