backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 5050
  selector:
    app: backend
